--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -181,6 +181,8 @@
                             <li><a href="/profile/">Мой профиль</a></li>
                             <li><a href="/admin/">Кабинет</a></li>
                             <li><a href="/admin/verify">Верификация аккаунта</a></li>
+                            <li><a href="/#contact">Форма обратной связи</a></li>
+
                             <li class="divider"></li>
                             <li><a href="/logout"><i class="fa fa-fw fa-power-off text-danger"></i> Logout</a></li>
                         </ul><!--end .dropdown-menu -->
