--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -99,6 +99,7 @@
                <i>
                    Я принимаю условия Пользовательского соглашения и даю своё согласие http://globalbigbell.com
                    на обработку моей персональной информации на условиях, определенных Политикой конфиденциальности.
+                   <a href="/docs/contract.docx" style="color:#0a6ebd ">Договор</a>
                </i>
             </div>
         <div class="input-group input-group-lg form-group">
