--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -207,7 +207,7 @@
                         <th scope="row">1</th>
                         <td>Индивидуальное доверительное управление</td>
                         <td style="color:#335433;" > до 10-25%/мес  </td>
-                        <td>  <a href="#">Открыть</a> </td>
+                        <td>  <a href="/docs/1.zip">Открыть</a> </td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
@@ -219,20 +219,22 @@
                         <th scope="row">3</th>
                         <td>Американские первичные акции (IPO)</td>
                         <td style="color:#335433;"> до 100% - годовых </td>
-                        <td>  <a href="#">Открыть</a> </td>
+                        <td>  <a href="/docs/ipo_doc.docx">Открыть</a> </td>
                     </tr>
                     <tr>
                         <th scope="row">4</th>
                         <td>Инвестиции в недвижимость Тайланда</td>
                         <td style="color:#335433;" >  15% годовых  </td>
-                        <td>  <a href="#">Открыть</a>  </td>
+                        <td>  <a href="/docs/PH-V_LH_R.pdf">Открыть</a>  + <a href="/docs/attachments.zip">Фото</a>  </td>
                     </tr>
 
                     <tr>
                         <th scope="row">5</th>
                         <td>Доходные автомобили Тайланда</td>
                         <td style="color:#335433;" > до 50% годовых </td>
-                        <td>   <a href="#">Открыть</a>  </td>
+                        <td>
+                            {#<a href="#">Открыть</a>#}
+                        </td>
                     </tr>
                     </tbody>
                 </table>
