--- a/templates/index/about.html.twig
+++ b/templates/index/about.html.twig
@@ -9,11 +9,14 @@
 
         <div class="slogan">
             <h2>О НАС</h2>
-            <h4>Мы являемся экспертами в области аналитики и инвестирования в различные
-                современные финансовые инструменты, включая высокодоходные.</h4>
+            <h4>GLOBAL BIG BELL</h4>
+            {#<h4>Мы являемся экспертами в области аналитики и инвестирования в различные#}
+                {#современные финансовые инструменты, включая высокодоходные.</h4>#}
         </div>
         <div class="page-scroll">
-
+            <a href="#about" class="btn btn-circle">
+                <i class="fa fa-angle-double-down animated"></i>
+            </a>
         </div>
     </section>
     <!-- /Section: intro -->
@@ -33,60 +36,102 @@
     </style>
 
 
-    <div class="text-center section py-5">
-        <div class="container">
+    {#<div class="text-center section py-5">#}
+        {#<div class="container">#}
 
-            <div class="row">
-                <div class="col-md-12 div-col-md-background">
-                    <div><h4>GlobalBigBell</h4></div>
-                    <div style="text-align:left">
-                        Агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты
-                        с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся
-                        в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.
-                    </div>
-                </div>
+            {#<div class="row">#}
+                {#<div class="col-md-12 div-col-md-background">#}
+                    {#<div><h4>GlobalBigBell</h4></div>#}
+                    {#<div style="text-align:left">#}
+                        {#Агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты#}
+                        {#с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся#}
+                        {#в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.#}
+                    {#</div>#}
+                {#</div>#}
+            {#</div>#}
+
+
+            {#<div class="row">#}
+
+                {#<div  class="col-md-12 div-col-md-background">#}
+                    {#<div><h4>Отличия от других проектов</h4></div>#}
+                    {#<div style="text-align:left">#}
+                        {#В чем наше отличие от других проектов? Мы являемся структурным проектом, своего рода «проектом финансовых проектов». В наши портфели входит более 30 инструментов приумножения капитала с различной степенью рисков и доходности. Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».#}
+                    {#</div>#}
+                {#</div>#}
+
+                {#<div class="col-md-12 div-col-md-background">#}
+                    {#<div><h4>Страхование капитала. </h4></div>#}
+                    {#<div style="text-align:left">#}
+                        {#Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативном инструменте, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.#}
+
+                        {#Это достигается умением наших аналитиков отличать псевдо-проекты по доверительному управлению от реального доверительного управления, а также пониманием современного рынка финансовых инструментов.#}
+                    {#</div>#}
+                {#</div>#}
+
+                {#<div class="col-md-12 div-col-md-background">#}
+                    {#<div> <h4>Какие финансовые инструменты мы используем в своей работе?</h4></div>#}
+                    {#<div style="text-align:left">#}
+                        {#В составе наших портфелей используются такие инструменты, как:#}
+
+                        {#Американский рынок ценных бумаг (IPO), Форекс-брокеры, криптовалютные хэдж-фонды, спортивный арбитраж, майнинг криптовалют, роботизированная торговля, вложения в Европейские инвестиционные кампании и другие интересные инструменты, которые позволят получить#}
+
+                        {#максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.#}
+
+                        {#Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.#}
+
+                        {#Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.#}
+
+                        {#Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.#}
+
+                        {#Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее! Будущее финансовой безопасности и процветания.#}
+                    {#</div>#}
+                {#</div>#}
+
+            {#</div>#}
+        {#</div>#}
+    {#</div>#}
+
+
+
+
+
+
+<div class="text-center section py-5">
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-12 div-col-md-background">
+                <div id="about"><h4>Global Big Bell</h4></div>
+
+                <p>Мы являемся экспертами в области аналитики и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств.</p>
+                <p>Описание</p>
+                <p>Global Big Bell – агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.</p>
+                <p>Отличия от других проектов</p>
+                <p>В чем наше отличие от других проектов? Мы являемся структурным проектом, совмещая лучший свойства аналогичных финансовых проектов.</p>
+                <p>В наши портфели входит более 30 различных инструментов приумножения капитала с различной степенью рисков и доходности.</p>
+                <p>Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».</p>
+                <p>Страхование капитала.</p>
+                <p>Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативных инструментах, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.</p>
+                <p>Это достигается умением наших аналитиков выбирать правильные                          и современные инструменты для инвестирования, учитывая все требования по риск-менеджменту и мани-менеджменту.</p>
+
+
+                <p>Какие финансовые инструменты мы используем в своей работе?</p>
+                <p>В составе наших портфелей используются такие инструменты, как:</p>
+                <p>Российский фондовый рынок, фьючерсные контракты,  американский рынок первичных  ценных бумаг (IPO), роботизированная торговля Forex, роботизированная торговля криптовалютой, инвестиции в Европейские инвестиционные кампании, инвестиции в недвижимость                                           и доходные транспортные средства Тайланда и другие ликвидные инструменты.</p>
+
+                <p>Это позволяет получить максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.</p>
+
+                <p>Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.</p>
+                <p>Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.</p>
+                <p>Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.</p>
+                <p>Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее!</p>
+                <p>Будущее финансовой безопасности и процветания.</p>
             </div>
 
-
-            <div class="row">
-
-                <div  class="col-md-12 div-col-md-background">
-                    <div><h4>Отличия от других проектов</h4></div>
-                    <div style="text-align:left">
-                        В чем наше отличие от других проектов? Мы являемся структурным проектом, своего рода «проектом финансовых проектов». В наши портфели входит более 30 инструментов приумножения капитала с различной степенью рисков и доходности. Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».
-                    </div>
-                </div>
-
-                <div class="col-md-12 div-col-md-background">
-                    <div><h4>Страхование капитала. </h4></div>
-                    <div style="text-align:left">
-                        Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативном инструменте, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.
-
-                        Это достигается умением наших аналитиков отличать псевдо-проекты по доверительному управлению от реального доверительного управления, а также пониманием современного рынка финансовых инструментов.
-                    </div>
-                </div>
-
-                <div class="col-md-12 div-col-md-background">
-                    <div> <h4>Какие финансовые инструменты мы используем в своей работе?</h4></div>
-                    <div style="text-align:left">
-                        В составе наших портфелей используются такие инструменты, как:
-
-                        Американский рынок ценных бумаг (IPO), Форекс-брокеры, криптовалютные хэдж-фонды, спортивный арбитраж, майнинг криптовалют, роботизированная торговля, вложения в Европейские инвестиционные кампании и другие интересные инструменты, которые позволят получить
-
-                        максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.
-
-                        Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.
-
-                        Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.
-
-                        Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.
-
-                        Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее! Будущее финансовой безопасности и процветания.
-                    </div>
-                </div>
-
-            </div>
         </div>
     </div>
+</div>
+
     <br/><br/><br/><br/>
 {% endblock %}
