--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -62,7 +62,7 @@
                 </li>
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Основное <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">О компании <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="/training" title="обучение" class="btn btn-success" >Oбучение</a></li>
                         <li><a href="/howto" title="О проекте">Как это работает</a></li>
