--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -7,8 +7,26 @@
 
 
 
+
                 <!-- BEGIN BUTTON -->
-                <div class="col-md-4">
+                <div class="col-md-3">
+                    <div class="card">
+                        <button
+                                style="color: #f2f3f3;
+                                    background-color: #4caf50;
+                                    border-color: #4caf50;"
+                                 type="button" class=" btn btn-block ink-reaction btn-default-bright"  data-toggle="modal" data-target="#PortfolioOneModal">
+                            Фондовый
+                        </button>
+                    </div><!--end .card -->
+                </div><!--end .col -->
+                <!-- END BUTTON -->
+
+
+
+
+                <!-- BEGIN BUTTON -->
+                <div class="col-md-3">
                     <div class="card">
                         <button type="button" class=" btn btn-block ink-reaction btn-default-bright"  data-toggle="modal" data-target="#ConservativeModal">
                             Консервативный
@@ -18,7 +36,7 @@
                 <!-- END BUTTON -->
 
                 <!-- BEGIN BUTTON -->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card">
                         <button type="button" class=" btn btn-block ink-reaction btn-info " data-toggle="modal" data-target="#OptimalModal" >Оптимальный</button>
                     </div><!--end .card -->
@@ -26,7 +44,7 @@
                 <!-- END BUTTON -->
 
                 <!-- BEGIN BUTTON -->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card">
                         <button type="button" class="btn btn-block ink-reaction btn-warning"  data-toggle="modal" data-target="#IPOModal" >IPO </button>
                     </div><!--end .card -->
@@ -280,5 +298,118 @@
         </div>
     </div>
 
+
+
+
+
+
+
+
+
+    <!--  begin  PortfolioOneModal -->
+    <!-- Modal -->
+    <div class="modal fade" id="PortfolioOneModal" tabindex="-1" role="dialog" aria-labelledby="PortfolioOneModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="PortfolioOneModalLabel">     Фондовый  </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- BEGIN SPINNERS -->
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h4> Фондовый </h4>
+                        </div><!--end .col -->
+                        <div class="">
+                            <div class="card">
+                                <div class="card-body">
+                                    {#<form class="form">#}
+                                        <div class="form-group">
+                                            {#<input type="text" class="form-control"  id="valueIPOModal" placeholder="0" />#}
+                                            <label>Фондовый</label>
+                                        </div>
+                                    {#</form>#}
+
+
+
+
+                                    <table class="table table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Основные характеристики портфеля</th>
+                                            <th scope="col">Показатели</th>
+
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <th scope="row">1</th>
+                                            <td>Доходность</td>
+                                            <td>30-50%-годовых</td>
+
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">2</th>
+                                            <td>Риск</td>
+                                            <td>до 10-20% от депо</td>
+
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">3</th>
+                                            <td>Минимальная сумма входа</td>
+                                            <td>100$</td>
+
+                                        </tr>
+
+
+                                        <tr>
+                                            <th scope="row">3</th>
+                                            <td>Частота выплат</td>
+                                            <td>1 раз в квартал, с 1-5 число следующего месяца</td>
+
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">4</th>
+                                            <td>Минимальный срок работы портфеля</td>
+                                            <td>любой</td>
+
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">5</th>
+                                            <td>Вывод тела депозита</td>
+                                            <td>да</td>
+
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">6</th>
+                                            <td>Стратегия инвестирования</td>
+                                            <td>долгосрочная</td>
+
+                                        </tr>
+                                        </tbody>
+                                    </table>
+
+
+
+                                </div><!--end .card-body -->
+                            </div><!--end .card -->
+                        </div><!--end .col -->
+                    </div><!--end .row -->
+                    <!-- END SPINNERS -->
+                </div>
+                <div class="modal-footer">
+                    <a href="/docs/1.docx">Как зарегистрироваться в портфеле-инструкция</a>
+                    {#<button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('IPO') " >Инвестировать</button>#}
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+                    {#<a href="#" class="btn btn-link">Подробней</a>#}
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--  end PortfolioOneModal -->
 
 {% endblock %}
