--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -52,7 +52,27 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-4 p-4">
+
+
+
+
+                <div class="col-lg-3 p-3">
+                    <div class="wow bounceInUp" data-wow-delay="0.2s">
+                        <div class="team boxed-grey">
+                            <div class="inner">
+                                <h5>Фондовый</h5>
+                                {#<p class="subtitle">Pixel Crafter</p>#}
+                                <div class="avatar">
+                                    <center>
+                                        <img src="/main/img/_01.png"  style=" width: 172px;"  alt="" class="img-responsive img-circle" />
+                                    </center>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
                         <div class="team boxed-grey">
                             <div class="inner">
@@ -67,7 +87,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 p-4">
+                <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.5s">
                         <div class="team boxed-grey">
                             <div class="inner">
@@ -83,7 +103,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 p-4">
+                <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.8s">
                         <div class="team boxed-grey">
                             <div class="inner">
