--- a/templates/admin/training.html.twig
+++ b/templates/admin/training.html.twig
@@ -1,6 +1,39 @@
 {% extends 'admin/base.html.twig' %}
 
 {% block body %}
+
+
+
+    <section  style="padding-top: 44px;padding-bottom: 44px;">
+        <div class="section-body">
+            <div class="row" >
+                <!-- BEGIN SITE ACTIVITY -->
+                <div class="_col-md-9">
+                    <div class="card ">
+                        <div>
+                            <div class="_col-md-4">
+                                <div class="card-head">
+                                    <header>Ваши платные уроки </header>
+                                </div>
+
+                                {% for unit in training %}
+                                    <div class="card-body">
+                                        <iframe width="100%" height="315" src="{{ unit.url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                                    </div><!--end .card-body -->
+                                {% endfor %}
+
+
+                            </div><!--end .col -->
+                        </div><!--end .row -->
+                    </div><!--end .card -->
+                </div><!--end .col -->
+                <!-- END SITE ACTIVITY -->
+            </div><!--end .row -->
+        </div><!--end .section-body -->
+    </section>
+
+
+
     <section  style="padding-top: 44px;padding-bottom: 44px;">
         <div class="section-body">
             <div class="row" >
